correction level contrast h1

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,7 @@
   height: 250px;
   color: #fff;
   background-repeat: no-repeat;
+  opacity: 0.;
 }
 
 .main-header h1 {
@@ -37,13 +38,15 @@
   .nav-item {
     padding-right: 2rem;
   }
+  .main-header h1{
+    font-size: 3em ;
+  }
 }
 
 @media (min-width: 376px) and (max-width: 768px) {
   .main-header {
     background-image: url("/img/header-mini.png");
-    padding-left: 20px;
-  }
+    padding-left: 20px;   
   .navbar-toggler {
     margin-right: 1em !important;
   }
@@ -68,7 +71,7 @@
   }
   .navbar-nav {
     margin-left: 0;
-  }  
+  }
 }
 
 .navbar-button {
